[tool.poetry]
name = "rrosborough-redis-test"
version = "0.1.0"
description = ""
authors = ["Radon Rosborough <radon@intuitiveexplanations.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
